--- a/world_config.json
+++ b/world_config.json
@@ -1,9 +1,69 @@
 {
   "width": 40,
   "height": 25,
-  "player_pos": {
-    "x": 11,
-    "y": 8,
+  "player_start": {
+    "x": 15,
+    "y": 10,
     "z": 0
-  }
+  },
+  "layers": [
+    {
+      "fill_tile": 2,
+      "random_walls": { "count": 5, "variance": 2 },
+      "layout": [
+        {"x": 5, "y": 3, "tile_id": 4, "z": 1},
+        {"x": 5, "y": 4, "tile_id": 4, "z": 2},
+        {"x": 5, "y": 5, "tile_id": 4, "z": 3},
+        {"x": 5, "y": 6, "tile_id": 4, "z": 4},
+        {"x": 5, "y": 7, "tile_id": 4, "z": 7},
+        {"x": 6, "y": 8, "tile_id": 4, "z": 8},
+        {"x": 5, "y": 9, "tile_id": 4, "z": 9},
+        {"x": 6, "y": 10, "tile_id": 4, "z": 10},
+        {"x": 5, "y": 11, "tile_id": 4, "z": 11},
+        {"x": 6, "y": 12, "tile_id": 4, "z": 12},
+        {"x": 5, "y": 13, "tile_id": 4, "z": 13},
+        {"x": 6, "y": 14, "tile_id": 4, "z": 14},
+        {"x": 5, "y": 15, "tile_id": 4, "z": 15},
+        {"x": 6, "y": 16, "tile_id": 4, "z": 16},
+        {"x": 5, "y": 17, "tile_id": 4, "z": 17},
+        {"x": 6, "y": 18, "tile_id": 4, "z": 18},
+        {"x": 35, "y": 3, "tile_id": 4, "z": 3},
+        {"x": 34, "y": 4, "tile_id": 4, "z": 4},
+        {"x": 35, "y": 5, "tile_id": 4, "z": 5},
+        {"x": 34, "y": 6, "tile_id": 4, "z": 6},
+        {"x": 35, "y": 7, "tile_id": 4, "z": 7},
+        {"x": 34, "y": 8, "tile_id": 4, "z": 8},
+        {"x": 35, "y": 9, "tile_id": 4, "z": 9},
+        {"x": 34, "y": 10, "tile_id": 4, "z": 10},
+        {"x": 35, "y": 11, "tile_id": 4, "z": 11},
+        {"x": 34, "y": 12, "tile_id": 4, "z": 12},
+        {"x": 35, "y": 13, "tile_id": 4, "z": 13},
+        {"x": 34, "y": 14, "tile_id": 4, "z": 14},
+        {"x": 35, "y": 15, "tile_id": 4, "z": 15},
+        {"x": 34, "y": 16, "tile_id": 4, "z": 16},
+        {"x": 35, "y": 17, "tile_id": 4, "z": 17},
+        {"x": 34, "y": 18, "tile_id": 4, "z": 18},
+        {"x": 20, "y": 1, "tile_id": 3, "z": -2},
+        {"x": 20, "y": 2, "tile_id": 3, "z": -2},
+        {"x": 20, "y": 3, "tile_id": 3, "z": -2},
+        {"x": 19, "y": 4, "tile_id": 3, "z": -2},
+        {"x": 19, "y": 5, "tile_id": 3, "z": -2},
+        {"x": 19, "y": 6, "tile_id": 3, "z": -2},
+        {"x": 20, "y": 7, "tile_id": 3, "z": -2},
+        {"x": 20, "y": 8, "tile_id": 3, "z": -2},
+        {"x": 21, "y": 9, "tile_id": 3, "z": -2},
+        {"x": 21, "y": 10, "tile_id": 3, "z": -2},
+        {"x": 21, "y": 11, "tile_id": 3, "z": -2},
+        {"x": 20, "y": 12, "tile_id": 3, "z": -2},
+        {"x": 20, "y": 13, "tile_id": 3, "z": -2},
+        {"x": 20, "y": 14, "tile_id": 3, "z": -2},
+        {"x": 20, "y": 15, "tile_id": 3, "z": -2},
+        {"x": 19, "y": 16, "tile_id": 3, "z": -2},
+        {"x": 19, "y": 17, "tile_id": 3, "z": -2},
+        {"x": 19, "y": 18, "tile_id": 3, "z": -2},
+        {"x": 19, "y": 19, "tile_id": 3, "z": -2},
+        {"x": 19, "y": 20, "tile_id": 3, "z": -2}
+      ]
+    }
+  ]
 }
